[project]
name = "codehealer"
version = "2.1.0"
description = "An autonomous agent to resolve environment and runtime errors in Python repos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

